--- a/SchedulingAssistant/Views/Home/Index.cshtml
+++ b/SchedulingAssistant/Views/Home/Index.cshtml
@@ -3,6 +3,47 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Choix des activités</h1>
+
+    <form asp-action="">
+
+        <div>
+            <label for="activity">Choisir une activité</label>
+            <select id="activity">
+                <option value="football">Match de football</option>
+                <option value="hockey">Match de hockey</option>
+            </select>
+        </div>
+
+        <div>
+            <p>Choisir un intervalle de date</p>
+            <label for="startDate">Début</label>
+            <input type="date" id="startDate" />
+            <label for="endDate">Fin</label>
+            <input type="date" id="endDate" />
+        </div>
+
+@*        <div>
+            <label for="location">Choisir un lieu</label>
+            <select id="location">
+                <option value="Sion">Sion</option>
+                <option value="Sierre">Sierre</option>
+                <option value="Martigny">Martigny</option>
+                <option value="Monthey">Monthey</option>
+            </select>
+        </div>
+
+        <div>
+            <label for="distance">Choisir une distance</label>
+            <select id="distance">
+                <option value="5">jusqu'à 5 km</option>
+                <option value="10">jusqu'à 10 km</option>
+                <option value="20">jusqu'à 20 km</option>
+                <option value="none">indifférent</option>
+            </select>
+        </div>*@
+
+        <input type="submit" value="Submit">
+    </form>
+
 </div>
