--- a/SchedulingAssistant/Views/Home/ActivityList.cshtml
+++ b/SchedulingAssistant/Views/Home/ActivityList.cshtml
@@ -12,18 +12,10 @@
 <table class="table">
     <thead>
         <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.MatchDate)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Team1)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Team2)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Location)
-            </th>
+            <th>Activity</th>
+            <th>Date</th></th>
+            <th>Host Team</th>
+            <th>Visitor Team</th>
             <th></th>
         </tr>
     </thead>
@@ -31,16 +23,19 @@
 @foreach (var item in Model) {
         <tr>
             <td>
+                @Html.DisplayFor(modelItem => item.ActivityType)
+            </td>
+            <td>
                 @Html.DisplayFor(modelItem => item.MatchDate)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Location)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Team1)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Team2)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Location)
             </td>
             <td>
                 @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
