--- a/SchedulingAssistant/Views/Home/Index.cshtml
+++ b/SchedulingAssistant/Views/Home/Index.cshtml
@@ -9,8 +9,8 @@
         <div style="margin-top: 40px;">
             <label for="sport">Choisir une activité : </label>
             <select name="sport" id="activity">
-                <option value="football">Match de football</option>
-                <option value="hockey">Match de hockey</option>
+                <option value="Football">Match de football</option>
+                <option value="Hockey">Match de hockey</option>
             </select>
         </div>
 
